--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Viral 2021</title>
-
+<script type='text/javascript' src='//pl16810132.effectivegatetocontent.com/1b/aa/72/1baa727a3e537dbda2aa8c848f52b059.js'></script>
+  
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/driancyber4rt/api/main/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://raw.githubusercontent.com/driancyber4rt/api/main/favicon.ico" type="image/x-icon">
 <meta content='Electronics Discount, Sports, Weddings, Online shopping, Automotive, Phones, Accessories, Computers, Electronics, Fashion, Beauty, Health, Home, Garden, Toys' name='keywords' />
