--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <meta content='Electronics Discount, Sports, Weddings, Online shopping, Automotive, Phones, Accessories, Computers, Electronics, Fashion, Beauty, Health, Home, Garden, Toys' name='keywords' />
 </head>
 <body>
-<div style='text-align:center;'><img src='https://1.bp.blogspot.com/-EL5jA2WYDFk/YLLk7MkC_5I/AAAAAAAAABI/HU4MAN36aHUk3Q_1dsoDa13KrU2ovBOcQCLcBGAsYHQ/s818/pngwing.com.png' width='30%' /></div>
+  <h2><center>KLIK LINK DIBAWAH INI</center></h2>
+<div style='text-align:center;'><img src='https://github.com/masdrian/viral/blob/main/klikdisini.png' width='30%' /></div>
 <div style='text-align:center;'><img src='https://1.bp.blogspot.com/-1KgTuEpdaiM/YLL_VIziHEI/AAAAAAAAABo/nMUJhbFV9c8OgSPQ7fZbYWdlhANJ-VxVgCLcBGAsYHQ/s320/512x512.gif' width='5%' /></div>
 </body>
 </html>
