--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h2><center>KLIK LINK DOWNLOAD DIBAWAH</center></h2>
-<div style='text-align:center;'><img src='https://raw.githubusercontent.com/masdrian/viral/main/klikdisini.png' width='30%' /></div>
+<img src="klikdisini.png">
 <div style='text-align:center;'><img src='https://1.bp.blogspot.com/-1KgTuEpdaiM/YLL_VIziHEI/AAAAAAAAABo/nMUJhbFV9c8OgSPQ7fZbYWdlhANJ-VxVgCLcBGAsYHQ/s320/512x512.gif' width='5%' /></div>
 </body>
 </html>
